# meegsim

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Makefile  README.md  collect_example_stubs.sh  pyproject.toml
.github/workflows/: documentation.yml  python-style.yml  python-tests.yml
blocks/: GALLERY_HEADER.rst  plot_patch_size.py
docs/: conf.py  index.rst  references.bib
docs/_static/: versions.json
docs/_templates/autosummary/: class.rst
docs/api/: configuration.rst  coupling.rst  index.rst  location.rst  simulate.rst  sources.rst  waveform.rst
docs/changelog/: devel.md  v0.0.1.md  v0.0.2.md
docs/development/: index.rst  setup.md  whats_new.rst
docs/user_guide/: get_started.rst  how_to_cite.rst  index.rst  install.rst  whats_new.rst
examples/: GALLERY_HEADER.rst  coupling.py  dummy.py  plot_coupling.py  random_state.py  select_kappa.py  sensor_space_noise.py  snr_adjustment.py  test_sample.py  usage.py
examples/advanced/: 00_customization.py  00_plot_customization.py  GALLERY_HEADER.rst
examples/basics/: 00_plot_minimal_example.py  01_plot_random_state.py  01_random_state.py  02_plot_brain_configuration.py  GALLERY_HEADER.rst  plot_brain_configuration.py  plot_configuration.py  plot_minimal_example.py
examples/building_blocks/: 00_plot_kappa_von_mises.py  00_select_kappa.py  01_plot_coupling.py  02_plot_global_snr.py  03_plot_local_snr.py  04_plot_brain_std.py  04_plot_sensor_space_noise.py  04_plot_std.py  05_plot_sensor_space_noise.py  GALLERY_HEADER.rst  snr_adjustment.py
src/meegsim/: _check.py  configuration.py  coupling.py  coupling_graph.py  location.py  sensor_noise.py  simulate.py  snr.py  source_groups.py  sources.py  utils.py  viz.py  waveform.py
tests/: test_check.py  test_configuration.py  test_coupling.py  test_coupling_graph.py  test_integration.py  test_location.py  test_sensor_noise.py  test_simulate.py  test_snr.py  test_source_groups.py  test_sources.py  test_subject.py  test_utils.py  test_viz.py  test_waveform.py
tests/utils/: misc.py  mocks.py  prepare.py
(+12 files in other folders)
