[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meegsim"
version = "0.0.1"
authors = [
  { name="Nikolai Kapralov", email="kapralov@cbs.mpg.de" },
  { name="Alina Studenova", email="studenova@cbs.mpg.de" },
]
description = "M/EEG simulation framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorednoise",
    "mne",
    "harmoni"
]

[project.urls]
Homepage = "https://github.com/ctrltz/meegsim"
Issues = "https://github.com/ctrltz/meegsim/issues"

[project.optional-dependencies]
dev = [
    "mock",
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = [
    "tests",
]
addopts = "--cov=src/meegsim --cov-report term-missing"